clusters/cluster0/kubernetes/apps/media/jellyfin/app/jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        #gpu: intel
        kubernetes.io/hostname: worker-01
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8096
              name: jellyfin
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-cache
              mountPath: /cache
            - name: jellyfin-media-pvc
              mountPath: /media
          resources:
            limits:
              gpu.intel.com/i915: "1"
              memory: 16Gi
              cpu: "2"
            requests:
              gpu.intel.com/i915: "1"
              memory: 10Gi
              cpu: 550m
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: jellyfin-media-pvc
          persistentVolumeClaim:
            claimName: media-pvc
