clusters/cluster0/kubernetes/apps/media/jellyfin/app/jellyfin-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-service
  namespace: media
  # annotations:
    # metallb.universe.tf/address-pool: "jellyfin-ip"
spec:
  selector:
    app: jellyfin
#  externalTrafficPolicy: Local
  ports:
    - name: jellyfin
      protocol: TCP
      port: 8096
      targetPort: 8096
    #  nodePort: 30096
#  type: NodePort
