clusters/cluster0/kubernetes/apps/media/jellyfin/app/jellyfin-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jellyfin.gregbob.net
spec:
  ingressClassName: external
  rules:
  - host: jellyfin.gregbob.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: jellyfin-service
            port:
              number: 8096
